# mcsync

./: README.md
client/: Cargo.toml  README.md
client/src/: config.rs  main.rs  platform.rs  prerequisites.rs  sync.rs
client/src/routines/: client_info.rs  connect.rs  disconnect.rs  import.rs  init.rs  install.rs  mod.rs
client/src/utils/: child.rs  hash.rs  mod.rs  rclone.rs
server/: Cargo.toml  Dockerfile  README.md
server/src/: database.rs  dns.rs  docker.rs  env.rs  main.rs  wireguard.rs
server/src/http/: cache.rs  ep_status.rs  handler.rs  middleware.rs  mod.rs  server.rs
server/src/routines/: accept.rs  mod.rs  remove.rs
