[package]
name = "mcsync-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]

# Logging
paris = { version = "1.5.13", features = ["timestamps", "macros"] }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"

# Key generation / Crypto
uuid = { version = "1.1.2", features = ["v4" ]}
wireguard-keys = "0.1.1"
sha256 = "1.0.3"

# Better CLI
clap = { version = "3.2.15", features = ["derive"] }
camino = "1.0.9"

# Platform specific code
cfg-if = "1.0.0"
nix = "0.24.2"
dirs = "4.0"

# Get network interfaces
pnet_datalink = "0.31.0"