[package]
name = "mcsync-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"]}
futures = "0.3.21"

# ZIP
zip = "0.6.2"

# Logging
paris = { version = "1.5.13", features = ["timestamps", "macros"] }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"

# Key generation / Crypto
uuid = { version = "1.1.2", features = ["v4" ]}
wireguard-keys = "0.1.1"
ring = "0.16.20"
data-encoding = "2.3.2"

# HTTP
reqwest = { version = "0.11.11", features = ["json", "stream"] }

# Better CLI
clap = { version = "4.0.14", features = ["derive"] }
camino = "1.0.9"
humansize = "2.0.0"

# Platform specific code
cfg-if = "1.0.0"
nix = "0.25.0"
dirs = "4.0"
users = "0.11.0"
caps = "0.5.3"
walkdir = "2.3.2"

# Get network interfaces
pnet_datalink = "0.31.0"
ipnetwork = "0.20.0"