[package]
name = "mcsync-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paris = { version = "1.5.13", features = ["timestamps", "macros"] }
mojang = "0.1.0"
log = "0.4.8"
openssl = "0.10.27"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
nickel = "0.11.0"
ssh-key = { version = "0.4.2", features = ["ed25519"] }
lazy_static = "1.4.0"
bollard = "0.13.0"
tokio = { version = "1.20.1", features = ["full"]}