[package]
name = "mcsync-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]

# Utils
lazy_static = "1.4.0"
tokio = { version = "1.20.1", features = ["full"]}
signal-hook = "0.3.14"

# Build hooks
shadow-rs = "0.16.1"

# Logging
paris = { version = "1.5.13", features = ["timestamps", "macros"] }
log = "0.4.8"

# Minecraft related crates
mojang = "0.1.0"

# Crypto related crates
openssl = "0.10.27"
rand = "0.8.5"
sha256 = "1.0.3"
ssh-key = { version = "0.4.2", features = ["ed25519"] }

# Webserver related crates
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
nickel = "0.11.0"

# Docker interaction
bollard = "0.13.0"

# Network & DNS related crates
ipnet = "2.5.0"
domain = { version = "0.6.1", features = ["resolv", "bytes"] }

[build-dependencies]
shadow-rs = "0.16.1"