[package]
name = "mcsync-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]

# Utils
lazy_static = "1.4.0"
futures-util = "0.3.21"
tokio = { version = "1.20.1", features = ["full"]}
signal-hook = "0.3.14"
regex = "1"

# Build hooks
shadow-rs = "0.16.1"

# Logging
paris = { version = "1.5.13", features = ["timestamps", "macros"] }
log = "0.4.8"

# Minecraft related crates
mojang = "0.1.0"

# Crypto related crates
openssl = "0.10.27"
rand = { version = "0.8.5", features = ["getrandom"] }
sha256 = "1.0.3"
wireguard-keys = "0.1.1"

# Webserver related crates
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
url = "2.2.2"
actix-web = "4"

# Docker interaction
bollard = "0.13.0"

# Network & DNS related crates
ipnet = "2.5.0"
domain = { version = "0.6.1", features = ["resolv", "bytes"] }

[build-dependencies]
shadow-rs = "0.16.1"
